@@ -389,7 +389,13 @@ unix_recv_io(int argc, VALUE *argv, VALUE sock)
 #if FD_PASSING_BY_MSG_CONTROL
     memcpy(&fd, CMSG_DATA(&cmsg.hdr), sizeof(int));
 #endif
-    rb_fd_fix_cloexec(fd);
+
+    rb_update_max_fd(fd);
+
+    if (rsock_cmsg_cloexec_state < 0)
+	rsock_cmsg_cloexec_state = rsock_detect_cloexec(fd);
+    if (rsock_cmsg_cloexec_state == 0 || fd <= 2)
+	rb_maygvl_fd_fix_cloexec(fd);
 
     if (klass == Qnil)
 	return INT2FIX(fd);
